# accounts-manager

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: release.yml
proto/: AccountsManagerGrpcService.proto  accounts_manager_grcp_service.proto
src/: lib.rs  main.rs  settings.rs
src/app/: app_context.rs  mod.rs  settings.rs
src/background/: accounts_sb_persist_bg_job.rs  mod.rs  persist_queue_item.rs  persist_sb_queue_job.rs
src/caches/: accounts.rs  accounts_cache.rs  mod.rs
src/flows/: mod.rs  update_balance.rs
src/grpc/: account_manager_grpc.rs  mappers.rs  mod.rs  process_id_cache.rs  server.rs
src/grpc/client/: position_manager_persistence_grpc_client.rs
src/grpc_client/: accounts_manager_persistence_grpc_client.rs  mod.rs
