[package]
name = "accounts-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-is-alive-shared = { tag = "0.5.0", git = "https://github.com/MyJetTools/http-is-alive-shared.git" }

flurl = { tag = "0.4.0", git = "https://github.com/MyJetTools/fl-url.git" }
persist-queue = { tag = "0.1.4", git = "https://github.com/MyJetTools/persist-queue.git" }
my-service-bus-tcp-client = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-service-bus-tcp-client.git" }
my-service-bus-abstractions = { tag = "0.1.1", git = "https://github.com/MyJetTools/my-service-bus-abstractions.git" }
cfd-engine-sb-contracts = { tag = "0.1.17", git = "https://github.com/my-cfd-platform/cfd-engine-sb-contracts.git" }
my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }
my-grpc-extensions = { tag = "0.4.0", git = "https://github.com/MyJetTools/my-grpc-extensions.git" }
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-logger = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-logger.git" }

my-grpc-client-macros = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-grpc-client-macros.git" }

my-telemetry = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-telemetry.git" }

tokio = { version = "*", features = ["full"] }
async-trait = "*"
tokio-util = "*"
tokio-test = "*"
chrono = "*"
stopwatch = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
prost = "*"
prost-types = "*"
serde = "*"
serde_json = "*"
serde_yaml = "*"
serde_derive = "*"
uuid = { version = "*", features = ["fast-rng", "v4", "macro-diagnostics"] }

[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
