[package]
name = "accounts-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service-sdk = { git = "https://github.com/MyJetTools/service-sdk.git", tag = "0.2.3", features = [
    "macros",
    "grpc",
    "my-service-bus",
] }

persist-queue = { tag = "0.1.4", git = "https://github.com/MyJetTools/persist-queue.git" }
cfd-engine-sb-contracts = { tag = "0.2.1", git = "https://github.com/my-cfd-platform/cfd-engine-sb-contracts.git" }
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }
tokio = { version = "*", features = ["full"] }
chrono = "*"
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
prost = "*"
prost-types = "*"
serde = "*"
uuid = { version = "*", features = ["fast-rng", "v4", "macro-diagnostics"] }

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
